Prevent contextual links on block plugins to overlap mega menu

--- a/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-menu.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/_ghi-menu.scss
@@ -38,7 +38,7 @@
 
         ul.menu li.menu-item .menu-link-contentmain {
           position: absolute;
-          z-index: 2;
+          z-index: 200;
           left: 0;
           width: 100%;
           background-color: var(--cd-default-background-color);
